--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -14,7 +14,7 @@
 						<div class="panel-body user-panel-body">
 							<div class="row">
 								<div class="col-xs-7 user-label">
-									<span th:replace="fragments/profile_image :: profile_image_big(${userDto.userProfileImageKey})"></span>									
+									<span th:replace="fragments/profile_image :: profile_image_big_with_popup(${userDto.userProfileImageKey})"></span>									
 									<span th:text="${userDto.username}"></span>							  		
 					  			</div>
 					  			<div class="col-xs-5">
