--- a/src/main/resources/templates/fragments/profile_image.html
+++ b/src/main/resources/templates/fragments/profile_image.html
@@ -19,7 +19,7 @@
 		
 		<div th:fragment="profile_image_small_with_popup(imageKey)" th:remove="tag">			
 			<div th:if="${imageKey}" th:remove="tag">
-				<a th:href="@{'/gallery/show/' + ${imageKey}}" th:attr="data-lightbox=${imageKey}" >
+				<a th:href="@{'/gallery/show/' + ${imageKey}}" th:attr="data-lightbox=${imageKey}" class="img-link">
 					<img th:if="${imageKey}" th:src="@{'/gallery/showthumb/' + ${imageKey}}" width="21" height="21" class="img-rounded"/>
 				</a>
 			</div>						
@@ -33,7 +33,7 @@
 		
 		<div th:fragment="profile_image_big_with_popup(imageKey)" th:remove="tag">			
 			<div th:if="${imageKey}" th:remove="tag">
-				<a th:href="@{'/gallery/show/' + ${imageKey}}" th:attr="data-lightbox=${imageKey}" >
+				<a th:href="@{'/gallery/show/' + ${imageKey}}" th:attr="data-lightbox=${imageKey}" class="img-link">
 					<img th:if="${imageKey}" th:src="@{'/gallery/showthumb/' + ${imageKey}}" width="28" height="28" class="img-rounded"/>
 				</a>
 			</div>						
