--- a/src/main/resources/static/css/print.css
+++ b/src/main/resources/static/css/print.css
@@ -1,6 +1,5 @@
 @media print {
-	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10,
-		.col-sm-11, .col-sm-12 {
+	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
 		float: left;
 	}
 	.col-sm-12 {
@@ -188,5 +187,8 @@
 	}
 	th.visible-sm, td.visible-sm {
 		display: table-cell !important;
+	}
+	a[href]:after {
+		content: none !important;
 	}
 }
