--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -118,9 +118,12 @@
 						  		<li th:class="${pageState_excelimport_show}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
 						  			<a href="#excelimport" th:href="@{/excelimport/show}" th:text="#{navigation.excelimport}"></a>
 					  			</li>
+					  			<li th:class="${pageState_excelexport_show}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
+						  			<a href="#excelexport" th:href="@{/excelexport/show}" th:text="#{navigation.excelexport}"></a>
+					  			</li>
 					  			<li th:class="${pageState_cache_show}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
 						  			<a href="#clearCache" th:href="@{/cache/show}" th:text="#{navigation.clearCaches}"></a>
-					  			</li>
+					  			</li>					  			
 				        	</ul>
 				        </li>
 					</ul>
