excel export reached points count

--- a/src/main/resources/templates/admin/excel_export.html
+++ b/src/main/resources/templates/admin/excel_export.html
@@ -10,7 +10,9 @@
 			<h1 th:text="#{administration.excel.export.title}"></h1>
 			<div class="row">			
 				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a class="btn btn-primary" role="button" th:href="@{/excelexport/allBets}" th:text="#{administration.excel.export.allBets}"></a>					
+					<a class="btn btn-primary" role="button" th:href="@{/excelexport/allBets}" th:text="#{administration.excel.export.allBets}"></a>
+					<p/>
+					<a class="btn btn-primary" role="button" th:href="@{/excelexport/pointsCount}" th:text="#{administration.excel.export.pointsCount}"></a>
 				</div>
 			</div>					
 		</div>
