--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -148,9 +148,18 @@ a.img-link  {
 	padding-bottom: 5px;
 }
 
-.badge-penalty-winner {
-	/*background: repeating-linear-gradient(-25deg, #5bc0de, #5bc0de 12px, #5bc0de 10px, green 20px);*/
-	border: 2px solid black;
+.badge-penalty-winner-bet {	
+	background: -webkit-repeating-linear-gradient(180deg, #5CB85C, black 30%); /* For Safari 5.1 to 6.0 */
+    background: -o-repeating-linear-gradient(180deg, #5CB85C, black 30%); /* For Opera 11.1 to 12.0 */
+    background: -moz-repeating-linear-gradient(180deg, #5CB85C, black 30%); /* For Firefox 3.6 to 15 */
+    background: repeating-linear-gradient(180deg, #5CB85C, black 30%); /* Standard syntax (must be last) */	
+}
+
+.badge-penalty-winner-match {
+	background: -webkit-repeating-linear-gradient(180deg, #5BC0DE, black 30%); /* For Safari 5.1 to 6.0 */
+    background: -o-repeating-linear-gradient(180deg, #5BC0DE, black 30%); /* For Opera 11.1 to 12.0 */
+    background: -moz-repeating-linear-gradient(180deg, #5BC0DE, black 30%); /* For Firefox 3.6 to 15 */
+    background: repeating-linear-gradient(180deg, #5BC0DE, black 30%); /* Standard syntax (must be last) */
 }
 
 .imgsizing img {
