--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
-<head>
-	<title th:text="#{login.title}"></title>
-</head>
-<body>
-	<div layout:fragment="content" class="container">
-		<h1 th:text="#{login.title.short}"></h1>
-		<div th:if="${param.error}">
-			<div class="alert alert-danger" role="alert" th:text="#{login.msg.error}"></div>
-		</div>
-		<form th:action="@{/login}" method="post">
-			<div class="row">
-				<div class="col-sm-6 col-lg-3">
-					<div class="form-group">
-						<input id="username" type="text" name="username" th:placeholder="#{login.placeholder.username}" class="form-control" />
-					</div>
-					<div class="form-group">
-						<input id="password" type="password" name="password" th:placeholder="#{login.placeholder.password}" class="form-control" />
-					</div>
-					<div class="form-group">
-        				<input type="checkbox" name="remember-me" id="remember-me"/>
-						<label for="remember-me">Auto-Login</label>
-					</div>					
-					<button id="loginSubmitBtn" type="submit" class="btn btn-primary" th:text="#{login.button.login}"></button>
-				</div>
+	<head>
+		<title th:text="#{login.title}"></title>
+	</head>
+	<body>
+		<div layout:fragment="content" class="container">
+			<h1 th:text="#{login.title.short}"></h1>
+			<div th:if="${param.error}">
+				<div class="alert alert-danger" role="alert" th:text="#{login.msg.error}"></div>
 			</div>
-		</form>
-	</div>
-</body>
+			<form th:action="@{/login}" method="post">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="row">
+						<div class="form-group">
+							<input id="username" type="text" name="username" th:placeholder="#{login.placeholder.username}" class="form-control" />
+						</div>
+						<div class="form-group">
+							<input id="password" type="password" name="password" th:placeholder="#{login.placeholder.password}" class="form-control" />
+						</div>
+						<div class="form-group">
+							<input data-toggle="toggle" type="checkbox" name="remember-me" id="remember-me" /> <label for="remember-me">Auto-Login</label>
+						</div>
+						<div class="form-group">
+							<button id="loginSubmitBtn" type="submit" class="btn btn-primary" th:text="#{login.button.login}"></button>
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
+	</body>
 </html>
