--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 	<head>
 		<title th:text="#{login.title}"></title>
+		<link rel="stylesheet" th:href="@{/css/bootstrap-toggle.min.css}" />
 	</head>
 	<body>
 		<div layout:fragment="content" class="container">
@@ -20,7 +21,8 @@
 							<input id="password" type="password" name="password" th:placeholder="#{login.placeholder.password}" class="form-control" />
 						</div>
 						<div class="form-group">
-							<input data-toggle="toggle" type="checkbox" name="remember-me" id="remember-me" /> <label for="remember-me">Auto-Login</label>
+							<input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success" type="checkbox" name="remember-me" /> 
+							<label for="remember-me">Auto-Login</label>
 						</div>
 						<div class="form-group">
 							<button id="loginSubmitBtn" type="submit" class="btn btn-primary" th:text="#{login.button.login}"></button>
@@ -28,6 +30,7 @@
 					</div>
 				</div>
 			</form>
-		</div>
+			<script type="text/javascript" th:src="@{/js/bootstrap-toggle.min.js}"></script>
+		</div>		
 	</body>
 </html>
