--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -121,8 +121,8 @@
 					  			<li th:class="${pageState_excelexport_show}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
 						  			<a href="#excelexport" th:href="@{/excelexport/show}" th:text="#{navigation.excelexport}"></a>
 					  			</li>
-					  			<li th:class="${pageState_cache_show}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
-						  			<a href="#clearCache" th:href="@{/cache/show}" th:text="#{navigation.clearCaches}"></a>
+					  			<li th:class="${pageState_config_show}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
+						  			<a href="#config" th:href="@{/config/show}" th:text="#{navigation.configuration}"></a>
 					  			</li>					  			
 				        	</ul>
 				        </li>
