refactored using bean validation

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -234,6 +234,10 @@ button.vote {
 	height: 200px;
 }
 
+.field-alert {
+	padding: 5px;
+}
+
 /** justified break point for navigation collapse on tablets */
 @media ( max-width : 991px) {
 	.navbar-header {
