--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -7,24 +7,27 @@
 	<body>
 		<div layout:fragment="content" class="container">
 			<div th:replace="fragments/alert :: alert_headline"></div>
-			<form id="userForm" th:action="@{/user}" th:object="${userCommand}" action="#" method="post" role="form">
+			<form id="userForm" th:action="@{/user}" th:object="${createUserCommand}" action="#" method="post" role="form">				
 				<div class="row">
 					<div class="col-xs-12 col-sm-6 col-md-4">
 						<input type="hidden" th:field="*{userId}" class="form-control" />
 						<div class="form-group">
 							<label for="username" th:text="#{user.create.username} + ':'"></label> 
-							<input type="text" th:field="*{username}" class="form-control" size="12" maxlength="12"/>
+							<input type="text" th:field="*{username}" class="form-control" size="12" maxlength="12" />
+							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username Error</p>
 						</div>
 						<div class="form-group">
-							<label for="password" th:text="#{user.create.password} + ':'"></label> 
+							<label for="password" th:text="#{user.create.password} + ':'"></label>							
 							<input type="password" th:field="*{password}" class="form-control" />
+							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</p>
 						</div>
 						<ul class="list-group">
-							<li class="list-group-item" th:each="role : ${userCommand.availableRoles}">
-								<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@securityService.isRoleSelectionDisabledForUser(userCommand.username)}" />
-								<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
-							</li>
+							<li class="list-group-item" th:each="role : ${createUserCommand.availableRoles}">
+								<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@securityService.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
+								<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>								
+							</li>							
 						</ul>
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles Error</p>
 						<div class="form-group">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 							<a href="#" th:href="@{/user}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
