--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -21,13 +21,16 @@
 							<input type="password" th:field="*{password}" class="form-control" />
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</p>
 						</div>
-						<ul class="list-group">
-							<li class="list-group-item" th:each="role : ${createUserCommand.availableRoles}">
-								<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@securityService.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
-								<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>								
-							</li>							
-						</ul>
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles Error</p>
+						<div class="form-group">
+							<label for="roles" th:text="#{user.create.roles} + ':'"></label>			
+							<ul class="list-group">
+								<li class="list-group-item" th:each="role : ${createUserCommand.availableRoles}">
+									<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@securityService.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
+									<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>								
+								</li>							
+							</ul>
+							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles Error</p>
+						</div>						
 						<div class="form-group">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 							<a href="#" th:href="@{/user}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
