--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -26,9 +26,9 @@
 						</ul>
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles Error</p>
 					</div>
-					<div class="form-group">
-						<label for="child" th:text="#{user.create.child} + ':'"></label>		
+					<div class="form-group">								
 						<input type="checkbox" th:field="*{child}" th:value="${child}"/>
+						<label for="child" th:text="#{user.create.child}"></label>
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('child')}" th:errors="*{child}">child Error</p>
 					</div>
 					<div class="form-group" sec:authorize="hasAuthority('PERM_PASSWORD_RESET')">
