--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -8,6 +8,13 @@
 		<div layout:fragment="content">
 			<div th:replace="fragments/alert :: alert_headline"></div>
 			<h1 th:text="#{ranking.list.title}"></h1>
+			<div class="row  pull-right">
+				<a href="#" th:href="@{/ranking/mixed}" class="btn btn-default"><i class="fa fa-user" aria-hidden="true"></i> <i class="fa fa-child" aria-hidden="true"></i></a>					
+				<a href="#" th:href="@{/ranking/adult}" class="btn btn-default"><i class="fa fa-user" aria-hidden="true"></i></a>
+				<a href="#" th:href="@{/ranking/child}" class="btn btn-default"><i class="fa fa-child" aria-hidden="true"></i></a>
+			</div>
+			<br/>
+			<br/>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" th:each="ranking,status : ${rankings}">				
 					<div class="panel panel-default">
