--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -18,7 +18,7 @@
 							<a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}"></a>
 							<br/>
 							<br/>
-							<a href="#" th:href="@{/excelimport/download/confcup2017}">Conferderations Cup 2017</a>
+							<a href="#" th:href="@{/excelimport/download/wm2018}">WM 2018</a>
 						</div>
 					</div>			
 				</div>	
