selective showing divider

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -61,7 +61,7 @@
 					            <li th:if="${@groupAvailabilityUtil.isGroupAvailable('GROUP_H')}" th:class="${pageState_matches_group_GROUP_H}">
 					            	<a href="#matches" th:href="@{/matches/group/GROUP_H}" th:text="#{group} + ' H'"></a>
 				            	</li>
-					            <li class="divider" role="separator"></li>
+					            <li th:if="${@groupAvailabilityUtil.isKnockOutMatchesAvailable()}" class="divider" role="separator"></li>
 					            <li th:if="${@groupAvailabilityUtil.isGroupAvailable('ROUND_OF_SIXTEEN')}" th:class="${pageState_matches_group_ROUND_OF_SIXTEEN}">
 					            	<a href="#matches" th:href="@{/matches/group/ROUND_OF_SIXTEEN}" th:text="#{group.entry.ROUND_OF_SIXTEEN}"></a>
 				            	</li>
