--- a/src/main/resources/templates/admin/configuration.html
+++ b/src/main/resources/templates/admin/configuration.html
@@ -31,6 +31,21 @@
 					</form>					
 				</div>
 			</div>
+			<hr/>
+			<h2 th:text="#{administration.runtime.configuration}"></h2>
+			<div class="row">			
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<form id="saveRuntimeConfigForm" th:action="@{/config/saveRuntimeConfig}" th:object="${configurationCommand}" action="#" method="post" role="form">
+						<div class="form-group">								
+							<input type="checkbox" th:field="*{runtimeConfig.enabledParentChildRanking}"/>
+							<label for="child" th:text="#{administration.runtime.configuration.enabledParentChildRanking}"></label>							
+						</div>
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+						</div>
+					</form>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
