--- a/src/main/resources/templates/admin/configuration.html
+++ b/src/main/resources/templates/admin/configuration.html
@@ -17,7 +17,7 @@
 			<hr/>
 			<h2 th:text="#{administration.change.loglevel.title}"></h2>
 			<div class="row">			
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-xs-6 col-sm-4 col-md-2">
 					<form id="changeLogLevelForm" th:action="@{/config/changeLogLevel}" th:object="${configurationCommand}" action="#" method="post" role="form">
 						<ul class="list-group">
 							<li class="list-group-item" th:each="level : ${configurationCommand.logLevel}">
@@ -34,15 +34,21 @@
 			<hr/>
 			<h2 th:text="#{administration.runtime.configuration}"></h2>
 			<div class="row">			
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-xs-12 col-sm-12 col-md-6">
 					<form id="saveRuntimeConfigForm" th:action="@{/config/saveRuntimeConfig}" th:object="${configurationCommand}" action="#" method="post" role="form">
-						<div class="form-group">								
-							<input type="checkbox" th:field="*{runtimeConfig.enabledParentChildRanking}"/>
-							<label for="child" th:text="#{administration.runtime.configuration.enabledParentChildRanking}"></label>							
-						</div>
+						<ul class="list-group">
+							<li class="list-group-item">								
+								<input type="checkbox" th:field="*{runtimeConfig.enabledParentChildRanking}"/>
+								<label for="child" th:text="#{administration.runtime.configuration.enabledParentChildRanking}"></label>							
+							</li>
+							<li class="list-group-item">									
+								<input type="checkbox" th:field="*{runtimeConfig.enableChangingUsername}"/>
+								<label for="child" th:text="#{administration.runtime.configuration.enableChangingUsername}"></label>							
+							</li>
+						</ul>
 						<div class="form-group">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-						</div>
+						</div>						
 					</form>
 				</div>
 			</div>
