--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE">FredBet</title>
 		
-		<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />		
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" />		
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap-theme.min.css}" />		
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
