--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -16,6 +16,8 @@
 		<link rel="stylesheet" th:href="@{/css/print.css}" media="print"/>
 
 		<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+				
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>		
 		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>		
 	</head>
