--- a/src/main/resources/templates/admin/configuration.html
+++ b/src/main/resources/templates/admin/configuration.html
@@ -73,15 +73,15 @@
 						<label th:text="#{administration.runtime.configuration.extraBetPoints} + ':'"></label>
 						<table class="table table-responsive">
 			   				<tr>
-			   					<td th:text="#{administration.runtime.configuration.pointsFinalWinner.title}"></td>
+			   					<td th:text="#{administration.runtime.configuration.pointsFinalWinner.title}" class="text-left"></td>
 				   				<td><input type="text" th:field="*{runtimeConfig.pointsFinalWinner}"/></td>
 			   				</tr>
 			   				<tr>
-			   					<td th:text="#{administration.runtime.configuration.pointsSemiFinalWinner.title}"></td>
+			   					<td th:text="#{administration.runtime.configuration.pointsSemiFinalWinner.title}" class="text-left"></td>
 			   					<td><input type="text" th:field="*{runtimeConfig.pointsSemiFinalWinner}"/></td>
 			   				</tr>
 			   				<tr>
-			   					<td th:text="#{administration.runtime.configuration.pointsThirdFinalWinner.title}"></td>
+			   					<td th:text="#{administration.runtime.configuration.pointsThirdFinalWinner.title}" class="text-left"></td>
 			   					<td><input type="text" th:field="*{runtimeConfig.pointsThirdFinalWinner}"/></td>
 			   				</tr>
 				   		</table>
