--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -64,7 +64,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
-						<div class="panel panel-danger">
+						<div class="panel panel-default">
 							<div class="panel-heading">
 								<span class="bold" th:text="#{extra_bets.reachedPoints} + ':'"></span>
 								<span class="right label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? label-warning : label-default" 
