--- a/src/main/resources/templates/admin/configuration.html
+++ b/src/main/resources/templates/admin/configuration.html
@@ -74,15 +74,15 @@
 						<table class="table table-responsive">
 			   				<tr>
 			   					<td th:text="#{administration.runtime.configuration.pointsFinalWinner.title}" class="text-left"></td>
-				   				<td><input type="text" th:field="*{runtimeConfig.pointsFinalWinner}"/></td>
+				   				<td class="col-md-6"><input type="text" size="5" th:field="*{runtimeConfig.pointsFinalWinner}"/></td>
 			   				</tr>
 			   				<tr>
 			   					<td th:text="#{administration.runtime.configuration.pointsSemiFinalWinner.title}" class="text-left"></td>
-			   					<td><input type="text" th:field="*{runtimeConfig.pointsSemiFinalWinner}"/></td>
+			   					<td><input type="text" size="5" th:field="*{runtimeConfig.pointsSemiFinalWinner}"/></td>
 			   				</tr>
 			   				<tr>
 			   					<td th:text="#{administration.runtime.configuration.pointsThirdFinalWinner.title}" class="text-left"></td>
-			   					<td><input type="text" th:field="*{runtimeConfig.pointsThirdFinalWinner}"/></td>
+			   					<td><input type="text" size="5" th:field="*{runtimeConfig.pointsThirdFinalWinner}"/></td>
 			   				</tr>
 				   		</table>
 					</div>
