added daabase backup page

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -124,6 +124,9 @@
 					  			<li th:class="${pageState_config_show}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
 						  			<a href="#config" th:href="@{/config/show}" th:text="#{navigation.configuration}"></a>
 					  			</li>					  			
+					  			<li th:class="${pageState_backup_show}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
+						  			<a href="#backup" th:href="@{/backup/show}" th:text="#{navigation.backup}"></a>
+					  			</li>
 				        	</ul>
 				        </li>
 					</ul>
